--- a/SimWorlds15007556 2017/Assets/Assets.vcxproj.filters
+++ b/SimWorlds15007556 2017/Assets/Assets.vcxproj.filters
@@ -24,6 +24,9 @@
     <None Include="shader.fx">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="Bust\Bust.FBX">
+      <Filter>Models</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <MeshContentTask Include="Bird\BirdModelV1.fbx">
