--- a/SimWorlds15007556 2017/Game/Game.vcxproj.filters
+++ b/SimWorlds15007556 2017/Game/Game.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClInclude Include="InvisibleObject.h">
       <Filter>Objects\Headers</Filter>
     </ClInclude>
+    <ClInclude Include="BoidSettings.h">
+      <Filter>Base\Headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
