--- a/SimWorlds15007556 2017/Application/Application.vcxproj
+++ b/SimWorlds15007556 2017/Application/Application.vcxproj
@@ -95,9 +95,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <GenerateManifest>true</GenerateManifest>
-    <IncludePath>E:\Charlie\Simworlds\SimWorlds15007556 2017\AntTweakBar\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\Charlie\Simworlds\SimWorlds15007556 2017\AntTweakBar\lib;$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir);..\Lib\um\x86;..\Bin\Desktop_2015\$(Platform)\$(Configuration)\</LibraryPath>
-    <SourcePath>E:\Charlie\Simworlds\SimWorlds15007556 2017\AntTweakBar\src;$(SourcePath)</SourcePath>
+    <IncludePath>$(SolutionDir)\AntTweakBar\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\AntTweakBar\lib;$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir);..\Lib\um\x86;..\Bin\Desktop_2015\$(Platform)\$(Configuration)\</LibraryPath>
+    <SourcePath>$(SolutionDir)\AntTweakBar\src;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|X64'">
     <LinkIncremental>true</LinkIncremental>
