--- a/SimWorlds15007556 2017/Game/Game.vcxproj
+++ b/SimWorlds15007556 2017/Game/Game.vcxproj
@@ -72,9 +72,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>..\Bin\Desktop_2015\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>..\Bin\Desktop_2015\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>E:\Charlie\Simworlds\SimWorlds15007556 2017\AntTweakBar\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\Charlie\Simworlds\SimWorlds15007556 2017\AntTweakBar\lib;$(LibraryPath)</LibraryPath>
-    <SourcePath>E:\Charlie\Simworlds\SimWorlds15007556 2017\AntTweakBar\src;$(SourcePath)</SourcePath>
+    <IncludePath>$(SolutionDir)\AntTweakBar\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\AntTweakBar\lib;$(LibraryPath)</LibraryPath>
+    <SourcePath>$(SolutionDir)\AntTweakBar\src;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>..\Bin\Desktop_2015\$(Platform)\$(Configuration)\</OutDir>
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClInclude Include="Boid.h" />
     <ClInclude Include="BoidManager.h" />
+    <ClInclude Include="BoidSettings.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="CMOGO.h" />
     <ClInclude Include="ConstantBuffer.h" />
